# f1c100s

./: .gitignore  .gitmodules  README.md
DateSheet/RTC6222/: R6222.c  R6222.h
RTC6222驱动/: R6222.c  R6222.h
SDK/: .nano_flash_dd.sh.swp  install_tools.sh  nano_flash_dd.sh  runOnBoot
SDK/ESP8089-SPI/: .cache.mk  .gitignore  Makefile  compile_commands.json  esp_sip.c  spi_sif_esp.c  spi_stub.c
SDK/Linux/: .config  .gitignore  Module.symvers  README  System.map  compile_commands.json  copy.sh
SDK/Linux/block/: .badblocks.o.cmd  .bio.o.cmd  .blk-core.o.cmd  .blk-exec.o.cmd  .blk-flush.o.cmd  .blk-ioc.o.cmd  .blk-lib.o.cmd  .blk-map.o.cmd  .blk-merge.o.cmd  .blk-mq-cpumap.o.cmd  .blk-mq-debugfs.o.cmd  .blk-mq-sched.o.cmd  .blk-mq-sysfs.o.cmd  .blk-mq-tag.o.cmd  .blk-mq.o.cmd  .blk-settings.o.cmd  .blk-softirq.o.cmd  .blk-stat.o.cmd  .blk-sysfs.o.cmd  .blk-tag.o.cmd  .blk-timeout.o.cmd  .bounce.o.cmd  .bsg.o.cmd  .built-in.o.cmd  .cfq-iosched.o.cmd  .deadline-iosched.o.cmd  .elevator.o.cmd  .genhd.o.cmd  .ioctl.o.cmd  .ioprio.o.cmd  .kyber-iosched.o.cmd  .mq-deadline.o.cmd  .noop-iosched.o.cmd  .partition-generic.o.cmd  .scsi_ioctl.o.cmd
SDK/Linux/certs/: .built-in.o.cmd  .system_certificates.o.cmd  .system_keyring.o.cmd
SDK/Linux/crypto/: .ablkcipher.o.cmd  .acompress.o.cmd  .aead.o.cmd  .aes_generic.o.cmd  .ahash.o.cmd  .akcipher.o.cmd  .algapi.o.cmd  .algboss.o.cmd  .api.o.cmd  .arc4.o.cmd  .blkcipher.o.cmd  .built-in.o.cmd  .cache.mk  .ccm.o.cmd  .cipher.o.cmd  .cmac.o.cmd  .compress.o.cmd  .crc32c_generic.o.cmd  .crypto.o.cmd  .crypto_acompress.o.cmd  .crypto_algapi.o.cmd  .crypto_blkcipher.o.cmd  .crypto_hash.o.cmd  .crypto_null.o.cmd  .crypto_wq.o.cmd  .cryptomgr.o.cmd  .ctr.o.cmd  .des_generic.o.cmd  .drbg.o.cmd  .echainiv.ko.cmd  .echainiv.mod.o.cmd  .echainiv.o.cmd  .gcm.o.cmd  .gf128mul.o.cmd  .ghash-generic.o.cmd  .hash_info.o.cmd  .hmac.o.cmd  .jitterentropy-kcapi.o.cmd  .jitterentropy.o.cmd  .jitterentropy_rng.o.cmd  (+19 more)
SDK/Linux/drivers/: .built-in.o.cmd  modules.builtin  modules.order
SDK/Linux/firmware/: .built-in.o.cmd
SDK/Linux/fs/: .aio.o.cmd  .anon_inodes.o.cmd  .attr.o.cmd  .bad_inode.o.cmd  .binfmt_elf.o.cmd  .binfmt_script.o.cmd  .block_dev.o.cmd  .buffer.o.cmd  .built-in.o.cmd  .char_dev.o.cmd  .coredump.o.cmd  .dcache.o.cmd  .direct-io.o.cmd  .drop_caches.o.cmd  .eventfd.o.cmd  .eventpoll.o.cmd  .exec.o.cmd  .fcntl.o.cmd  .fhandle.o.cmd  .file.o.cmd  .file_table.o.cmd  .filesystems.o.cmd  .fs-writeback.o.cmd  .fs_pin.o.cmd  .fs_struct.o.cmd  .inode.o.cmd  .ioctl.o.cmd  .iomap.o.cmd  .libfs.o.cmd  .locks.o.cmd  .mbcache.o.cmd  .mpage.o.cmd  .namei.o.cmd  .namespace.o.cmd  .nsfs.o.cmd  .open.o.cmd  .pipe.o.cmd  .pnode.o.cmd  .posix_acl.o.cmd  .proc_namespace.o.cmd  (+15 more)
SDK/Linux/init/: .built-in.o.cmd  .calibrate.o.cmd  .do_mounts.o.cmd  .init_task.o.cmd  .main.o.cmd  .mounts.o.cmd  .noinitramfs.o.cmd  .version.o.cmd
SDK/Linux/ipc/: .built-in.o.cmd
SDK/Linux/kernel/: .async.o.cmd  .bounds.s.cmd  .built-in.o.cmd  .capability.o.cmd  .cpu.o.cmd  .cpu_pm.o.cmd  .cred.o.cmd  .elfcore.o.cmd  .exec_domain.o.cmd  .exit.o.cmd  .extable.o.cmd  .fork.o.cmd  .freezer.o.cmd  .futex.o.cmd  .groups.o.cmd  .irq_work.o.cmd  .kallsyms.o.cmd  .kmod.o.cmd  .ksysfs.o.cmd  .kthread.o.cmd  .memremap.o.cmd  .module.o.cmd  .notifier.o.cmd  .nsproxy.o.cmd  .panic.o.cmd  .params.o.cmd  .pid.o.cmd  .pid_namespace.o.cmd  .ptrace.o.cmd  .range.o.cmd  .reboot.o.cmd  .resource.o.cmd  .signal.o.cmd  .smpboot.o.cmd  .softirq.o.cmd  .stacktrace.o.cmd  .sys.o.cmd  .sys_ni.o.cmd  .sysctl.o.cmd  .sysctl_binary.o.cmd  (+10 more)
SDK/Linux/lib/: .argv_split.o.cmd  .asn1_decoder.o.cmd  .assoc_array.o.cmd  .atomic64.o.cmd  .bcd.o.cmd  .bitmap.o.cmd  .bitrev.o.cmd  .bsearch.o.cmd  .bug.o.cmd  .built-in.o.cmd  .bust_spinlocks.o.cmd  .chacha20.o.cmd  .clz_ctz.o.cmd  .clz_tab.o.cmd  .cmdline.o.cmd  .crc16.o.cmd  .crc32.o.cmd  .ctype.o.cmd  .debug_locks.o.cmd  .dec_and_lock.o.cmd  .decompress.o.cmd  .devres.o.cmd  .div64.o.cmd  .dump_stack.o.cmd  .dynamic_queue_limits.o.cmd  .earlycpio.o.cmd  .errseq.o.cmd  .extable.o.cmd  .fdt.o.cmd  .fdt_empty_tree.o.cmd  .fdt_ro.o.cmd  .fdt_rw.o.cmd  .fdt_strerror.o.cmd  .fdt_sw.o.cmd  .fdt_wip.o.cmd  .find_bit.o.cmd  .flex_array.o.cmd  .flex_proportions.o.cmd  .gcd.o.cmd  .gen_crc32table.cmd  (+65 more)
SDK/Linux/mm/: .backing-dev.o.cmd  .built-in.o.cmd  .compaction.o.cmd  .debug.o.cmd  .dmapool.o.cmd  .early_ioremap.o.cmd  .fadvise.o.cmd  .filemap.o.cmd  .gup.o.cmd  .highmem.o.cmd  .init-mm.o.cmd  .interval_tree.o.cmd  .list_lru.o.cmd  .maccess.o.cmd  .madvise.o.cmd  .memblock.o.cmd  .memory.o.cmd  .mempool.o.cmd  .migrate.o.cmd  .mincore.o.cmd  .mlock.o.cmd  .mm_init.o.cmd  .mmap.o.cmd  .mmu_context.o.cmd  .mmzone.o.cmd  .mprotect.o.cmd  .mremap.o.cmd  .msync.o.cmd  .nobootmem.o.cmd  .oom_kill.o.cmd  .page-writeback.o.cmd  .page_alloc.o.cmd  .page_io.o.cmd  .page_vma_mapped.o.cmd  .pagewalk.o.cmd  .percpu.o.cmd  .pgtable-generic.o.cmd  .process_vm_access.o.cmd  .readahead.o.cmd  .rmap.o.cmd  (+14 more)
SDK/Linux/net/: .built-in.o.cmd  .socket.o.cmd  .sysctl_net.o.cmd
SDK/Linux/scripts/: .asn1_compiler.cmd  .conmakehash.cmd  .extract-cert.cmd  .kallsyms.cmd  .sortextable.cmd  asn1_compiler  conmakehash  extract-cert  kallsyms  sortextable
SDK/Linux/security/: .built-in.o.cmd  .commoncap.o.cmd  .min_addr.o.cmd
SDK/Linux/sound/: .built-in.o.cmd  .last.o.cmd  .sound_core.o.cmd  .soundcore.o.cmd  modules.builtin
SDK/Linux/usr/: .built-in.o.cmd
SDK/Linux/virt/: .built-in.o.cmd
SDK/app/: .gitignore
SDK/app/chat/: CMakeLists.txt
SDK/app/chat/audiorecorder/: CMakeLists.txt  audio_rec.cpp
SDK/app/chat/src/: main.cpp  offline_wkup.cpp
SDK/app/chat/tts/: tts.h
SDK/app/test/: CMakeLists.txt
SDK/app/test/lib/: CMakeLists.txt
SDK/app/test/lib/asr/: asr.cpp  asr.h
SDK/app/test/src/: CMakeLists.txt  main.cpp
SDK/root/: defconfig  f1c100s_xiaodq_defconfig  rootfs.tar
SDK/rootfs/: rootfs.tar
SDK/rootfs/etc/: group  passwd  profile  shadow
SDK/u-boot/: System.map  compile_commands.json  ls  u-boot  u-boot-dtb.img  u-boot.cfg  u-boot.map  u-boot.srec  u-boot.sym
(+6770 files in other folders)
